Fix dialog overflow

--- a/src/main/webapp/META-INF/resources/css/basev2.css
+++ b/src/main/webapp/META-INF/resources/css/basev2.css
@@ -1,7 +1,7 @@
 /*
 The base stylesheet for Lotas-webapplication
 */
-/* 
+/*
     Created on : 24.2.2016, 11:55:11
     Author     : Jarmo Juujärvi (based on base.css by Sami kallio)
 */
@@ -71,12 +71,12 @@ nav {
     padding: 0.5em;
 }
 
-    .textContentArea {
-        width: 70%;
-        margin: 1% auto 1% auto;
-        display: block;
-        padding: 2.5em;
-    }
+.textContentArea {
+    width: 70%;
+    margin: 1% auto 1% auto;
+    display: block;
+    padding: 2.5em;
+}
 
 .naviHeader {
     width: 100%;
@@ -102,21 +102,21 @@ nav {
 }
 
 .accessButtons {
-    
+
     width: 9.5em;
     height: 2.0em;
     margin: auto auto auto auto;
-/*    display: block;*/
+    /*    display: block;*/
     text-align: center;
     padding: 1.0em;
 }
 
-    .coloredButton {
-        background: #ff6600;
-        opacity: 0.9;
-        color: white;
-    }
- 
+.coloredButton {
+    background: #ff6600;
+    opacity: 0.9;
+    color: white;
+}
+
 .naviFooter {
     width: 100%;
     float: right;
@@ -125,7 +125,7 @@ nav {
     background-color: #ff6600;
     align-content: flex-end;
     text-align: center;
-    
+
 }
 
 a:link {text-decoration: none; color: whitesmoke;}
@@ -133,40 +133,44 @@ a:visited {text-decoration: none; color: whitesmoke;}
 a:active {text-decoration: none; color: whitesmoke;}
 a:hover {text-decoration: none; color: orange;}
 
+.ui-dialog-content {
+    overflow-y: auto;
+    max-height: calc(100vh - 65px);
+}
 
 @media screen and (max-width: 800px) {
-    
+
     nav {
         padding-top: 0.5em;
         width: 96%;
         margin: 1% auto 1% auto;
         border: none;
-        padding-bottom: 0.5em;  
-        
+        padding-bottom: 0.5em;
+
     }
-    
+
     .welcomeContent {
         width: 96%;
         margin: 1% auto 1% auto;
         padding: 0.5em;
     }
-    
-        .textContentArea {
+
+    .textContentArea {
         width: 70%;
         margin: auto auto auto auto;
         display: block;
         padding: 2.5em;
     }
-    
+
     .naviHeader {
-        width: 100%; 
+        width: 100%;
         height: 26px;
-        background-color: #ff6600; 
+        background-color: #ff6600;
         background-size: 100%;
         text-align: center;
         padding-bottom: 0.8em;
     }
-    
+
     .naviButtons {
         width: 50px;
         height: 10px;
@@ -174,28 +178,28 @@ a:hover {text-decoration: none; color: orange;}
         text-align: center;
         float: right;
     }
-    
+
     .accessButtons {
         width: 9.5em;
         height: 2.0em;
-/*        margin: 2.5% auto 2.5% auto;*/
+        /*        margin: 2.5% auto 2.5% auto;*/
         display:table;
         text-align: center;
         padding: 1.0em;
-        color: white;   
+        color: white;
     }
-    
+
     .coloredButton {
         background: #ff6600;
         opacity: 0.9;
     }
-  
+
     .naviFooter {
         width: 100%;
-        float: right;    
+        float: right;
         height: 20px;
         background-size: 50%;
-        background-color: #ff6600; 
+        background-color: #ff6600;
         text-align: center;
-   }
+    }
 }
